--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,7 +7,7 @@ website:
       - href: index.qmd
         text: Home
       - href: about.qmd
-        text: Bio
+        text: About
       - href: projects.qmd
         text: Projects
 
